Add images and update paths for deployment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Profile</h2>
             <div class="profile-content">
                 <div class="profile-image">
-                    <img src="/Users/linpengyou/Desktop/Portfolio/Introduction/Profile.jpg" alt="Melody's Profile" class="profile-photo">
+                    <img src="images/profile.jpg" alt="Melody's Profile" class="profile-photo">
                 </div>
                 <div class="profile-text">
                     <h3>Melody Lin</h3>
@@ -76,7 +76,7 @@
             <h2>Research Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="/Users/linpengyou/Desktop/Portfolio/Research project/MNB report thumbnail.png" alt="Crypto-assets Report" class="project-thumbnail">
+                    <img src="images/crypto-report.png" alt="Crypto-assets Report" class="project-thumbnail">
                     <h3>Crypto-assets and Climate Change Report</h3>
                     <p class="project-meta">2023 | Role: Researcher</p>
                     <p><strong>Background:</strong> Led a joint research project between the Central Bank of Hungary and CFTE, in collaboration with the Crypto Carbon Ratings Institute (CCRI), producing an industry report on crypto assets and sustainability. The report assesses the environmental impact of cryptoassets, outlines data collection and measurement methodologies, highlights real-world sustainability initiatives, and explores potential regulatory frameworks. Managed a team of three interns and coordinated with a central bank director and CCRI specialist to deliver the publication.</p>
@@ -84,7 +84,7 @@
                     <a href="https://drive.google.com/file/d/1vza5oeezZ0ohDKA_C9XQ0NTiMawknD1D/view?usp=sharing" target="_blank" class="btn-link">View Details →</a>
                 </div>
                 <div class="project-card">
-                    <img src="/Users/linpengyou/Desktop/Portfolio/Research project/Rearchiteching report thumbnail.png" alt="Rearchitecting Report" class="project-thumbnail">
+                    <img src="images/rearchitecting-report.png" alt="Rearchitecting Report" class="project-thumbnail">
                     <h3>Rearchitecting the Global Financial System</h3>
                     <p class="project-meta">2024 | Role: Researcher</p>
                     <p><strong>Background:</strong> Contributed to a thought leadership whitepaper in partnership with the Japan Fintech Festival on key developments in global finance.</p>
@@ -96,7 +96,7 @@
                     <a href="https://drive.google.com/file/d/1O_N_DKc1exYk513jj4JZOR4gfI4Abcbf/view?usp=sharing" target="_blank" class="btn-link">View Details →</a>
                 </div>
                 <div class="project-card">
-                    <img src="/Users/linpengyou/Desktop/Portfolio/Research project/Japan Fintech hub thumbnail.png" alt="Japan FinTech Ecosystem Report" class="project-thumbnail">
+                    <img src="images/japan-fintech.png" alt="Japan FinTech Ecosystem Report" class="project-thumbnail">
                     <h3>Building a Thriving Financial and FinTech Ecosystem in Japan</h3>
                     <p class="project-meta">2024 | Role: Researcher</p>
                     <p><strong>Background:</strong> Partnered with Japan Fintech Festival as a whitepaper. Contributed as a researcher and led a team of 2 interns and 1 analyst.</p>
