Add AI project thumbnails and update project details

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul class="nav-links">
                 <li><a href="#profile" class="nav-link active" data-tab="profile">Profile</a></li>
                 <li><a href="#data-projects" class="nav-link" data-tab="data-projects">Data Projects</a></li>
+                <li><a href="#ai-projects" class="nav-link" data-tab="ai-projects">AI-related Projects</a></li>
                 <li><a href="#research-projects" class="nav-link" data-tab="research-projects">Research Projects</a></li>
             </ul>
         </div>
@@ -67,6 +68,34 @@
                     <p class="project-meta">February 2026 | Python (Pandas, NumPy, Matplotlib, Seaborn, SciPy)</p>
                     <p>This project presents a comprehensive EDA of a subscription-based streaming platform's customer churn dataset. The objective is to identify behavioral, demographic, and subscription-related factors that affect churned customers from retained users. The analysis combines statistical hypothesis testing, correlation analysis, behavioral segmentation, and business impact evaluation to provide actionable recommendations.</p>
                     <a href="https://github.com/melody-peng/netflix-churn-rate-analysis" target="_blank" class="btn-link">View Details →</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- AI-related Projects Tab -->
+        <section id="ai-projects" class="tab-content">
+            <h2>AI-related Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <img src="images/social-listening-project.png" alt="Social Listening Project" class="project-thumbnail">
+                    <h3>Leveraging GenAI and automation workflows to analyze 10K product reviews</h3>
+                    <p class="project-meta">2025 | GCP (Jupyter Notebook, BigQuery), App Script, Google Sheets, Google Slides</p>
+                    <p>The project analyzed 10K product reviews from platforms such as Reddit and Amazon for portable projectors using AI-driven solutions on GCP and Google Workspace, reducing human review time and report generation by 80%. It enabled the entire analysis process to operate in a fully automated manner.</p>
+                    <a href="https://docs.google.com/presentation/d/12WkBpHeaMNO1Wdo7PHwedrKii9P0Arm_/edit?slide=id.g34660809bcf_0_6#slide=id.g34660809bcf_0_6" target="_blank" class="btn-link">View Details →</a>
+                </div>
+                <div class="project-card">
+                    <img src="images/ai-search-project.png" alt="AI Search Project" class="project-thumbnail">
+                    <h3>Adopting AI analytics tools to optimize a brand's visibility in AI-powered search</h3>
+                    <p class="project-meta">2026 | Peec AI (AI Search Analytics Platform)</p>
+                    <p>As AI search traffic grows rapidly and user behavior continues to shift, I leveraged Peec AI (an AI search analytics platform) to evaluate a top-tier bank in Taiwan's visibility and ranking performance in AI-generated search results using a four-quadrant framework. Based on the findings, I developed actionable strategies to help the bank improve its positioning and competitiveness in AI search environments.</p>
+                    <a href="https://docs.google.com/presentation/d/1y6w8kthSIYoR54lSKVwX_2b-X8OxzJO_/edit?usp=sharing&ouid=104892723178430444606&rtpof=true&sd=true" target="_blank" class="btn-link">View Details →</a>
+                </div>
+                <div class="project-card">
+                    <img src="images/ai-agent.png" alt="AI Agent Project" class="project-thumbnail">
+                    <h3>Build an AI agent to shorten response time and enhance client satisfaction</h3>
+                    <p class="project-meta">2026 | n8n, Google Workspace</p>
+                    <p>I developed an AI-driven workflow to automate client inquiries regarding GA4, GTM, and BigQuery. By integrating official documentation and RAG-based drafting with human-in-the-loop review, I reduced reply times to consistently meet a 2-day SLA, significantly boosting efficiency and client satisfaction.</p>
+                    <a href="#" class="btn-link">View Details →</a>
                 </div>
             </div>
         </section>
