--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="python">Python</button>
                 <button class="filter-btn" data-filter="sql">SQL</button>
+                <button class="filter-btn" data-filter="data-viz">Data Visualization</button>
             </div>
             <div class="projects-grid">
                 <div class="project-card" data-category="python">
