Add certifications section to profile page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                     <p class="bio">Previously based in London with experience in Fintech consulting after graduating from University College London (UCL), I collaborated with financial institutions and central banks on digital transformation initiatives in AI, Fintech and Sustainability.</p>
                     <p class="bio">With experience in London, Taiwan and now the States, I bring a global mindset and transferable skills, combining expertise in turning data into actionable insights with collaboration, resilience, and empathy that set me apart in any environment.</p>
                     <p class="bio"><strong>Technical Skills:</strong> Programming (Python), Data Analytics (Excel, SQL, Tableau, SPSS), GCP (BigQuery), GMP (Google Analytics, Google Tag Manager, Looker Studio), Social Listening (Talkwalker, Brandwatch), AI search analytics (Peec AI, Jellyfish SoM)</p>
+                    <div class="certifications">
+                        <h4>Certifications</h4>
+                        <ul>
+                            <li>Google Professional Data Engineer Certification - 2025</li>
+                            <li>Google Cloud Digital Leader Certification - 2025</li>
+                            <li>Google Analytics Certificate - 2025</li>
+                            <li>Google Ads Certification - 2025</li>
+                        </ul>
+                    </div>
+                    <br>
                     <div class="contact-links">
                         <a href="https://www.linkedin.com/in/peng-yu-lin/" target="_blank" class="btn">LinkedIn</a>
                         <a href="https://github.com/melody-peng" target="_blank" class="btn">GitHub</a>
