Add new Python data projects and update filters

--- a/index.html
+++ b/index.html
@@ -56,29 +56,28 @@
         <section id="data-projects" class="tab-content">
             <h2>Data Projects</h2>
             <div class="filter-buttons">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="python">Python</button>
+                <button class="filter-btn active" data-filter="python">Python</button>
                 <button class="filter-btn" data-filter="sql">SQL</button>
-                <button class="filter-btn" data-filter="data-viz">Data Visualization</button>
+                <button class="filter-btn" data-filter="tableau">Tableau</button>
             </div>
             <div class="projects-grid">
                 <div class="project-card" data-category="python">
-                    <h3>Project Title 1</h3>
-                    <p class="project-meta">Date | Tools Used</p>
-                    <p>Brief description of your data project.</p>
-                    <a href="#" class="btn-link">View Details →</a>
-                </div>
-                <div class="project-card" data-category="sql">
-                    <h3>Project Title 2</h3>
-                    <p class="project-meta">Date | Tools Used</p>
-                    <p>Brief description of your data project.</p>
-                    <a href="#" class="btn-link">View Details →</a>
-                </div>
-                <div class="project-card" data-category="python">
                     <h3>Netflix Customer Churn Analysis: Behavioral Drivers, Statistical Testing, Revenue Impact and Retention Optimization</h3>
-                    <p class="project-meta">February 2026 | Python (Pandas, NumPy, Matplotlib, Seaborn, SciPy)</p>
+                    <p class="project-meta">2026 | Python (Pandas, NumPy, Matplotlib, Seaborn, SciPy)</p>
                     <p>This project presents a comprehensive EDA of a subscription-based streaming platform's customer churn dataset. The objective is to identify behavioral, demographic, and subscription-related factors that affect churned customers from retained users. The analysis combines statistical hypothesis testing, correlation analysis, behavioral segmentation, and business impact evaluation to provide actionable recommendations.</p>
                     <a href="https://github.com/melody-peng/netflix-churn-rate-analysis" target="_blank" class="btn-link">View Details →</a>
+                </div>
+                <div class="project-card" data-category="python">
+                    <h3>Customer Segmentation of Credit Card Clients (Adopting K-Means Clustering)</h3>
+                    <p class="project-meta">2026 | Python (Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn)</p>
+                    <p>This project applies K-Means clustering to segment credit card customers based on demographic attributes, card usage behavior, churn indicators, and membership activity. The objective is to identify distinct customer groups to support targeted marketing strategies, improve retention efforts, and enhance personalized customer relationship management initiatives.</p>
+                    <a href="https://github.com/melody-peng/bank-clients-clustering" target="_blank" class="btn-link">View Details →</a>
+                </div>
+                <div class="project-card" data-category="python">
+                    <h3>Leveraging CRM Data to Perform RFM Customer Segmentation</h3>
+                    <p class="project-meta">2026 | Python (Pandas, NumPy, Matplotlib, Seaborn)</p>
+                    <p>This project utilizes CRM customer personality data to conduct RFM (Recency, Frequency, Monetary) analysis. By analyzing purchase behavior, campaign responses, demographics, and spending patterns across product categories, the analysis segments customers into actionable groups to improve targeting strategies and enhance overall marketing performance.</p>
+                    <a href="https://github.com/melody-peng/CRM-data-RFM-analysis" target="_blank" class="btn-link">View Details →</a>
                 </div>
             </div>
         </section>
